# lazystow

./: .envrc  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
src/: action.rs  app.rs  components.rs  main.rs  mode.rs  stow.rs
src/app/: stow.rs  ui.rs
src/components/: display_dir.rs  stow_files.rs  utils.rs
