[package]
name = "lazystow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = ["serde"] }
ratatui = { version = "0.26.1", default-features = false, features = [
    "crossterm",
    "serde",
] }
tui-textarea = { version = "0.4.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", default-features = false, features = ["std"] }
thiserror = "1.0"
